--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "tailwind-scrollbar": "^3.1.0",
     "typescript": "^4.9.5",
